# au705086_mlops

./: README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/mnist_repo/: data.py  evaluate.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
